Change model schema

--- a/src/main/resources/templates/perpus/anggota/addAnggota.html
+++ b/src/main/resources/templates/perpus/anggota/addAnggota.html
@@ -45,7 +45,7 @@
         </p>
         <form class="form-group" action="/perpus/anggota/saveAnggota" th:action="@{/perpus/anggota/saveAnggota}" method="post">  
         <!-- <form id="myForm" class="form-group"> -->
-        	<input th:type="hidden" name="idanggota" path="idanggota" id="idanggota" />
+        	<input th:type="hidden" name="id" path="id" id="id" />
         	<div class="form-group">
                 <label for="content">Nama :</label>
                 <input type="text" class="form-control" name="nama_anggota" path="nama_anggota" id="nama_anggota" />
