--- a/src/main/resources/templates/perpus/anggota/listAnggota.html
+++ b/src/main/resources/templates/perpus/anggota/listAnggota.html
@@ -2,86 +2,127 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
-    <title>Perpus - List Anggota</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="all" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
-    <link rel="stylesheet" type="text/css" media="all" href="../static/css/main.css" th:href="@{/css/main.css}" />
-    <script type="text/javascript" th:src="@{/js/jquery-1.8.3.min.js}" /></script>  
-    <script type="text/javascript">
-        function doDetail(idanggota){
-        	window.location.href = '/perpus/anggota/detail/'+idanggota;
-        }
-        
-        function doEdit(idanggota){
-        	window.location.href = '/perpus/anggota/edit/'+idanggota;
-        }
-                   
-		function doDelete(idanggota){
-			var hapusData = confirm("Do you want to delete this record ?");
-			if(hapusData == true){
-				window.location.href = '/perpus/anggota/delete/'+idanggota;
-			}else{
-				window.location.href = '#';
-			}
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>E-Library :: Indonesia</title>
+  <!-- inject:css -->
+  <link rel="stylesheet" type="text/css" media="all" href="../static/css/style.css" th:href="@{/css/style.css}" />
+  <!-- <link rel="stylesheet" type="text/css" media="all" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" /> -->
+  <!-- <link rel="stylesheet" type="text/css" media="all" href="../static/css/main.css" th:href="@{/css/main.css}" /> -->
+  <!-- endinject -->
+  <script type="text/javascript" th:src="@{/js/jquery-1.8.3.min.js}" /></script>  
+  <link rel="shortcut icon" href="../../images/favicon.png" />
+  <script type="text/javascript">
+  	function doDetail(idanggota){
+  		window.location.href = '/perpus/anggota/detail/'+idanggota;
+  	}
+  
+  	function doEdit(idanggota){
+  		window.location.href = '/perpus/anggota/edit/'+idanggota;
+  	}
+             
+	function doDelete(idanggota){
+		var hapusData = confirm("Do you want to delete this record ?");
+		if(hapusData == true){
+			window.location.href = '/perpus/anggota/delete/'+idanggota;
+		}else{
+			window.location.href = '#';
 		}
-		
-		$(document).ready(function(){
-			$.ajax({
-				type: "GET",
-				url: "/rest/perpus/anggota/listAnggota",
-				dataType: "json",
-				contentTye: "application/json",
-				success: function(data){
-					var hasilData = JSON.parse(JSON.stringify(data));
-					for(i=0; i<hasilData.length; i++){
-						var idanggota = document.getElementById("idanggota");
-						var nama_anggota = document.getElementById("nama_anggota");	
-						idanggota.innerHTML = hasilData[i].idpeminjam;						
-						nama_anggota.innerHTML = hasilData[i].nama_peminjam;
-						console.log(hasilData[i].idpeminjam + " - " + hasilData[i].nama_peminjam);
-					}
-				},
-				error: function(data){
-					window.alert("ERROR BRO!");
+	}
+	
+	$(document).ready(function(){
+		$.ajax({
+			type: "GET",
+			url: "/rest/perpus/anggota/listAnggota",
+			dataType: "json",
+			contentTye: "application/json",
+			success: function(data){
+				var hasilData = JSON.parse(JSON.stringify(data));
+				for(i=0; i<hasilData.length; i++){
+					var idanggota = document.getElementById("idanggota");
+					var nama_anggota = document.getElementById("nama_anggota");	
+					idanggota.innerHTML = hasilData[i].idpeminjam;						
+					nama_anggota.innerHTML = hasilData[i].nama_peminjam;
+					console.log(hasilData[i].idpeminjam + " - " + hasilData[i].nama_peminjam);
 				}
-			})
-		})
-	</script>
+			},
+			error: function(data){
+				window.alert("ERROR BRO!");
+			}
+		});
+	});
+  </script>
 </head>
 <body>
-    <div class="container">
-        <h1>List Anggota</h1>
-        <p>
-            <a href="/perpus/buku/listBuku" th:href="@{/perpus/buku/listBuku}">Menu Utama</a> |
-            <a href="/perpus/anggota/addAnggota" th:href="@{/perpus/anggota/addAnggota}">Add Anggota</a>
-        </p>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id Anggota</th>
-                    <th>Nama</th>
-                    <th>Alamat</th>
-                    <th>Email</th>
-                    <th>Tgl Join</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="anggota : ${anggota}" id="data">
-                    <td th:text="${anggota.idanggota}">${anggota.idanggota}</td>
-                    <td th:text="${anggota.nama_anggota}">${anggota.nama_anggota}</td>
-                    <td th:text="${anggota.alamat}">${anggota.alamat}</td>
-                    <td th:text="${anggota.email}">${anggota.email}</td>
-                    <td th:text="${anggota.tgl_join}">${anggota.tgl_join}</td>                                        
-                    <td>
-                    	<input type="button" value="Detail" class="btn btn-secondary" th:onclick="|doDetail('${anggota.idanggota}');|"/>
-                        <input type="button" value="Edit" class="btn btn-primary" th:onclick="|doEdit('${anggota.idanggota}');|"/>                        
-                        <input type="button" value="Delete" class="btn btn-danger" th:onclick="|doDelete('${anggota.idanggota}');|"/>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+  <div class="container-scroller">
+    <!-- partial:../../partials/_navbar.html -->
+    <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
+        <a class="navbar-brand brand-logo justify-content-center" href="/perpus/index">E-Library</a>
+      </div>
+      <div class="navbar-menu-wrapper d-flex align-items-stretch">
+        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+        <span class="mdi mdi-menu"></span>
+        </button>
+      </div>
+    </nav>    
+    <div class="container-fluid page-body-wrapper">
+  		<div class="row row-offcanvas row-offcanvas-right">
+  		<!-- Right Menu -->
+  		<nav th:replace="/perpus/rightMenu::#sidebar"></nav>
+        <!-- partial -->
+        <div class="content-wrapper">
+        	<a class="col-lg-12 grid-margin stretch-card" href="/perpus/anggota/addAnggota">Add New Member</a>
+            <div class="col-lg-12 grid-margin stretch-card">           		
+			  <div class="card">
+			    <div class="card-body">
+			      <h4 class="card-title">List of Member</h4>
+			      <table class="table table-striped">
+			        <thead>
+			          <tr>
+			            <th>Member Id</th>
+	                    <th>Name</th>
+	                    <th>Email</th>        
+	                    <th>Actions</th>
+			          </tr>
+			        </thead>
+			        <tbody>
+		                <tr th:each="anggota : ${anggota}" id="data">
+		                    <td th:text="${anggota.idanggota}">${anggota.idanggota}</td>
+		                    <td th:text="${anggota.nama_anggota}">${anggota.nama_anggota}</td>
+		                    <td th:text="${anggota.email}">${anggota.email}</td>                                        
+		                    <td>
+		                    	<input type="button" value="Detail" class="btn btn-secondary" th:onclick="|doDetail('${anggota.idanggota}');|"/>
+		                        <input type="button" value="Edit" class="btn btn-primary" th:onclick="|doEdit('${anggota.idanggota}');|"/>                        
+		                        <input type="button" value="Delete" class="btn btn-danger" th:onclick="|doDelete('${anggota.idanggota}');|"/>
+		                    </td>
+		                </tr>
+		            </tbody>
+			      </table>
+			    </div>
+			  </div>
+			</div>
+        </div>
+        <!-- content-wrapper ends -->
+        <!-- partial:../../partials/_footer.html -->
+        <footer class="footer">
+          <div class="d-sm-flex justify-content-center justify-content-sm-between">
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2017 <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap Dash</a>. All rights reserved.</span>
+            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span>
+          </div>
+        </footer>
+        <!-- partial -->
+      </div>
+      <!-- row-offcanvas ends -->
     </div>
+    <!-- page-body-wrapper ends -->
+  </div>
+  <script type="text/javascript" th:src="@{/js/chart.js}" /></script>
+  <script type="text/javascript" th:src="@{/js/dashboard.js}" /></script>
+  <script type="text/javascript" th:src="@{/js/misc.js}" /></script>
+  <script type="text/javascript" th:src="@{/js/off-canvas.js}" /></script>
 </body>
+
 </html>
