--- a/src/main/resources/templates/perpus/peminjaman/detailPeminjaman.html
+++ b/src/main/resources/templates/perpus/peminjaman/detailPeminjaman.html
@@ -16,8 +16,12 @@
   <link rel="shortcut icon" href="../../images/favicon.png" />    
   <script type="text/javascript">
   	function doCancel(){
-       	window.location.href = '/perpus/anggota/listAnggota'; 
-    }  	
+       	window.location.href = '/perpus/peminjaman/listPeminjaman'; 
+    }
+  	
+	function doBorrow(kdbuku){
+       	window.location.href = '/perpus/peminjaman/pinjamBuku/'+kdbuku; 
+    }
   </script>
 </head>
 <body>
@@ -42,30 +46,38 @@
             <div class="col-lg-12 grid-margin stretch-card">
 			  <div class="card">
 			    <div class="card-body">
-			      <h4 class="card-title">Detail of Member</h4>			      
+			      <h4 class="card-title">Detail of Transaction</h4>			      
 			      	<div class="form-group">
-			            <label for="content">Member Id :</label>
-			            <input type="text" class="form-control" name="idanggota" th:field="${anggota.idanggota}" readonly/>
+			            <label for="content">Transaction Code :</label>
+			            <input type="text" class="form-control" name="kdpeminjaman" th:field="${peminjaman.kdpeminjaman}" readonly/>
 			        </div>
 			        <div class="form-group">
-			            <label for="content">Name :</label>
-			            <input type="text" class="form-control" name="nama_anggota" th:field="${anggota.nama_anggota}" readonly/>
-			        </div>
-			       	<div class="form-group">
-			        	<label for="content">Address :</label>
-			            <input type="text" class="form-control" name="alamat" th:field="${anggota.alamat}" readonly/>
+			        	<label for="content">Member Id :</label>
+			            <input type="text" class="form-control" name="idpeminjam" th:field="${peminjaman.anggota.idanggota}" readonly/>
 			        </div>
 			        <div class="form-group">
-			            <label for="content">Telp Number :</label>
-			            <input type="text" class="form-control" name="no_telp" th:field="${anggota.no_telp}" readonly/>
+			        	<label for="content">Name :</label>
+			            <input type="text" class="form-control" name="nama_peminjam" th:field="${peminjaman.anggota.nama_anggota}" readonly/>
 			        </div>
 			        <div class="form-group">
-			            <label for="content">Email :</label>
-			            <input type="text" class="form-control" name="email" th:field="${anggota.email}" readonly/>
+			            <label for="content">Book Code :</label>
+			            <input type="text" class="form-control" name="kdbuku" th:field="${peminjaman.buku.kdbuku}" readonly/>
 			        </div>
 			        <div class="form-group">
-			            <label for="content">Join Date :</label>
-			            <input type="text" class="form-control" name="tgl_join" th:field="${anggota.tgl_join}" readonly/>
+			            <label for="content">Title :</label>
+			            <input type="text" class="form-control" name="judul" th:field="${peminjaman.buku.judul}" readonly/>
+			        </div>
+			        <div class="form-group">
+			            <label for="content">Total :</label>
+			            <input type="text" class="form-control" name="jumlah" th:field="${peminjaman.jumlah}" readonly/>
+			        </div>
+			        <div class="form-group">
+			            <label for="content">Date of Borrow :</label>
+			            <input type="text" class="form-control" name="jumlah" th:field="${peminjaman.tgl_pinjam}" readonly/>
+			        </div>
+			        <div class="form-group">
+			            <label for="content">Date of Back :</label>
+			            <input type="text" class="form-control" name="jumlah" th:field="${peminjaman.tgl_kembali}" readonly/>
 			        </div>
 			        <input type="button" value="Cancel" class="btn btn-danger" onclick="doCancel();"/>
 			    </div>
