--- a/src/main/resources/templates/perpus/peminjaman/detailPeminjaman.html
+++ b/src/main/resources/templates/perpus/peminjaman/detailPeminjaman.html
@@ -9,8 +9,6 @@
   <title>E-Library :: Indonesia</title>
   <!-- inject:css -->
   <link rel="stylesheet" type="text/css" media="all" href="../static/css/style.css" th:href="@{/css/style.css}" />
-  <!-- <link rel="stylesheet" type="text/css" media="all" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" /> -->
-  <!-- <link rel="stylesheet" type="text/css" media="all" href="../static/css/main.css" th:href="@{/css/main.css}" /> -->
   <!-- endinject -->
   <script type="text/javascript" th:src="@{/js/jquery-1.8.3.min.js}" /></script>  
   <link rel="shortcut icon" href="../../images/favicon.png" />    
@@ -19,8 +17,27 @@
        	window.location.href = '/perpus/peminjaman/listPeminjaman'; 
     }
   	
-	function doBorrow(kdbuku){
-       	window.location.href = '/perpus/peminjaman/pinjamBuku/'+kdbuku; 
+  	window.onload = function(){
+	  	var statusPeminjaman = document.getElementById('status_peminjaman').value;
+	  	var btnApprove = document.getElementById('btnApprove');
+	  	var btnFinish = document.getElementById('btnFinish');
+	  	
+		if(statusPeminjaman == 'IN PROGRESS'){
+			btnFinish.style.display = 'none';
+		}else if(statusPeminjaman == 'APPROVED'){
+			btnApprove.style.display = 'none';
+		}else{
+			btnApprove.style.display = 'none';
+			btnFinish.style.display = 'none';
+		}
+  	}
+  	
+	function doApprove(kdpeminjaman){		
+       	window.location.href = '/perpus/peminjaman/approve/'+kdpeminjaman; 
+    }
+	
+	function doFund(kdpeminjaman){
+       	window.location.href = '/perpus/peminjaman/fund/'+kdpeminjaman; 
     }
   </script>
 </head>
@@ -46,7 +63,7 @@
             <div class="col-lg-12 grid-margin stretch-card">
 			  <div class="card">
 			    <div class="card-body">
-			      <h4 class="card-title">Detail of Transaction</h4>			      
+			      <h4 class="card-title">Detail of Transaction</h4>
 			      	<div class="form-group">
 			            <label for="content">Transaction Code :</label>
 			            <input type="text" class="form-control" name="kdpeminjaman" th:field="${peminjaman.kdpeminjaman}" readonly/>
@@ -79,6 +96,12 @@
 			            <label for="content">Date of Back :</label>
 			            <input type="text" class="form-control" name="jumlah" th:field="${peminjaman.tgl_kembali}" readonly/>
 			        </div>
+			        <div class="form-group">
+			            <label for="content">Status :</label>
+			            <input type="text" class="form-control" id="status_peminjaman" name="status_peminjaman" th:field="${peminjaman.status_peminjaman}" readonly/>
+			        </div>
+			        <input type="submit" value="Approve" id="btnApprove" class="btn btn-success" th:onclick="|doApprove('${peminjaman.kdpeminjaman}');|"/>
+			        <input type="submit" value="Finish" id="btnFinish" class="btn btn-primary" th:onclick="|doFund('${peminjaman.kdpeminjaman}');|"/>
 			        <input type="button" value="Cancel" class="btn btn-danger" onclick="doCancel();"/>
 			    </div>
 			  </div>
