Fixing update book

--- a/src/main/resources/templates/perpus/buku/pinjamBuku.html
+++ b/src/main/resources/templates/perpus/buku/pinjamBuku.html
@@ -142,9 +142,9 @@
 			               	<ul id="myUL"></ul>
 			            </div> 
 			            -->
-			            <button id="btnShowData" type="button" class="btn btn-primary">Show Data</button>
 			            <a href="javascript: validateForm();" class="btn btn-success" role="button">Save</a>
-			            <input type="button" value="Cancel" class="btn btn-danger" onclick="doCancel();"/></form>
+			            </form>
+			            <input type="button" value="Cancel" class="btn btn-danger" onclick="doCancel();"/>
            			</div>
               	</div>
             </div>            
